--- a/src/config/uwsgi.ini
+++ b/src/config/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 
-home            = /path/to/project
-chdir           = /path/to/project/storage
+home            = /path/to/domain.name
+chdir           = /path/to/domain.name
 socket          = /tmp/owl.uwsgi.sock
 pidfile         = /tmp/owl.uwsgi.pid
 wsgi-file       = runserver.py
