--- a/src/config/uwsgi.ini.dist
+++ b/src/config/uwsgi.ini.dist
@@ -13,6 +13,5 @@ workers         = 4
 daemonize       = logs/uwsgi.log
 vacuum          = true
 enable-threads  = true
-touch-reload    = owl/api/views.py
-touch-reload    = owl/storage/engines/local.py
-touch-reload    = owl/storage/core.py
+touch-reload    = owl/settings.py
+post-buffering  = 8192
