--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
 .idea
+/bin
+.Python
+/lib
+/pip-selfcheck.json
+/include
 /src/config/uwsgi.ini
 /src/owl/settings.py
+
+!src/logs/.gitkeep
+src/logs/*
