--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 
+.aws
 .idea
 /bin
 .Python
@@ -10,6 +11,7 @@ __pycache__/
 /include
 /src/config/uwsgi.ini
 /src/owl/settings.py
+/src/data
 
 !src/logs/.gitkeep
 src/logs/*
