--- a/src/owl/settings.py.dist
+++ b/src/owl/settings.py.dist
@@ -12,6 +12,7 @@ FORMAT = 'JSON'
 STORAGE_ENGINE = 'local'
 STORAGE_NAMING_STRATEGY = 'uuid'
 STORAGE_ENGINE_LOCAL_DATA_PATH = '/home/www/vhosts/owl/storage/data'
+STORAGE_ENGINE_S3_ENDPOINT_URL = 'https://storage.yandexcloud.net'
 
 # Storage image operator
 STORAGE_IMAGE_OPERATOR = 'imagemagick'
